--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,34 @@ rand = "*"
 cpal = "*"
 clap = {version="*", features = ["derive"]}
 ringbuf = "*"
-bytemuck = "1"
-ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
-beryllium = "0.2.0-alpha.4"
+cgmath = "0.18.0"
+cfg-if = "1"
+anyhow = "1.0"
+bytemuck = { version = "1.4", features = [ "derive" ] }
+env_logger = "0.9"
+log = "0.4"
+pollster = "0.2"
+wgpu = "0.14"
+winit = "0.27"
 
-[dev-dependencies]
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1"
+console_log = "0.2"
+wgpu = { version = "0.14", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+]}
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob = "0.3"
