--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "sound_guy"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+opt-level = 1
+overflow-checks = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 features = ["derive"]
 
@@ -20,6 +24,8 @@ log = "0.4"
 pollster = "0.2"
 wgpu = "0.14"
 winit = "0.27"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 
 [dependencies.image]
 version = "0.24"
