--- a/settings.json
+++ b/settings.json
@@ -4,5 +4,7 @@
 	"BackgroundColor": [0.0,0.0,0.0,0.0],
 	"Resizable": true,
 	"DefaultWidth": 400,
-	"DefaultHeight": 400
+	"DefaultHeight": 400,
+	"AlwaysOnTop": true,
+	"Title": "Sound Guy"
 }
