Fixed icon loading and made a new icon

--- a/avatar_settings.json
+++ b/avatar_settings.json
@@ -33,9 +33,9 @@
       "SourceFile": "shader.wgsl"
     },
     "MeshGeneration": {
-      "MeshGenFunction": {"MeshGenFunction": "Loaded", "file": "monkey.obj"},
+      "MeshGenFunction": {"MeshGenFunction": "Fibonacci"},
       "MeshRenderType": {"MeshRenderType": "Triangles"},
-      "Sample": 500,
+      "Sample": 2000,
       "MeshColorFunction": {"MeshColorFunction": "Rainbow"},
       "Size": 1.0
     },
