Camera rotation is now an option in settings.json

--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,6 @@
 	"DefaultWidth": 400,
 	"DefaultHeight": 400,
 	"AlwaysOnTop": true,
-	"Title": "Sound Guy"
+	"Title": "Sound Guy",
+	"CameraRotation": true
 }
