--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ env_logger = "0.9"
 log = "0.4"
 pollster = "0.2"
 wgpu = "0.14"
-winit = "0.27"
+winit = "*"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 
