--- a/avatar_settings.json
+++ b/avatar_settings.json
@@ -35,18 +35,20 @@
       "SourceFile": "shader.wgsl"
     },
     "MeshGeneration": {
-      "MeshGenFunction": {"MeshGenFunction": "Cube"},
+      "MeshGenFunction": {"MeshGenFunction": "Loaded",
+        "file": "spikey_ball.obj"
+      },
       "MeshRenderType": {"MeshRenderType": "Triangles"},
       "Sample": 2000,
       "MeshColorFunction": {"MeshColorFunction": "Rainbow"},
       "Size": 1.0
     },
     "Instancing": {
-      "Count": 25,
+      "Count": 120,
       "PositionX": 0.0,
       "PositionY": 0.0,
       "PositionZ": 0.0,
-      "Scale": 0.2,
+      "Scale": 0.05,
       "InstanceRotationFunction": {"InstanceRotationFunction": "Sphere"}
     }
   }
