--- a/settings.json
+++ b/settings.json
@@ -7,5 +7,7 @@
 	"DefaultHeight": 400,
 	"AlwaysOnTop": true,
 	"Title": "Sound Guy",
-	"CameraRotation": true
+	"CameraRotation": true,
+	"CameraSpeed": 5.0,
+	"CameraSensitivity": 1.0
 }
