It works on my machine :/

--- a/resources/avatar_settings.json
+++ b/resources/avatar_settings.json
@@ -32,10 +32,10 @@
       "ShaderUniform": [
         "Default"
       ],
-      "SourceFile": "resources/shadertime.wgsl"
+      "SourceFile": "resources/shader.wgsl"
     },
     "MeshGeneration": {
-      "MeshGenFunction": {"MeshGenFunction": "Cube",
+      "MeshGenFunction": {"MeshGenFunction": "Fibonacci",
         "file": "resources/models/spikey_ball.obj"
       },
       "MeshRenderType": {"MeshRenderType": "Triangles"},
